[tool.poetry]
name = "unreal-engine-docset"
version = "0.1.0"
description = ""
license = "BSD-3-Clause"
authors = ["Thomas Mansencal <thomas.mansencal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10, < 4"
click = ">= 8, < 9"
setuptools = "*"
tqdm = ">= 4, < 5"
lxml = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pyright = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
